--- a/CodeLingo/Lesson6/Page1.xaml
+++ b/CodeLingo/Lesson6/Page1.xaml
@@ -11,10 +11,9 @@
     <Grid>
         <Label x:Name="Subtitle" Content="This Lesson will cover the following: " HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
         <Label x:Name="Step1" Content="1. Arithmetic operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,19,0,0"/>
-        <Label x:Name="Step2" Content="2. Assignment operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,37,0,0"/>
-        <Label x:Name="Step3" Content="3. Increment and decrement operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,53,0,0"/>
-        <Label x:Name="Step4" Content="4. Compound assignment operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,70,0,0"/>
-        <Label x:Name="Step5" Content="5. The pow function" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,86,0,0"/>
+        <Label x:Name="Step3" Content="2. Increment and decrement operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,34,0,0"/>
+        <Label x:Name="Step4" Content="3. Compound assignment operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,51,0,0"/>
+        <Label x:Name="Step5" Content="4. Mathematical Functions" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,66,0,0"/>
 
     </Grid>
 </Page>
