--- a/CodeLingo/Lesson6/Page4.xaml
+++ b/CodeLingo/Lesson6/Page4.xaml
@@ -5,10 +5,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CodeLingo.Lesson6"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="Page4">
+       d:DesignHeight="300" d:DesignWidth="300"
+      Title="Page4" Width="448" Height="208">
 
     <Grid>
-        
+        <Label x:Name="Subtitle" Content="Increment and decrement operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
+        <TextBlock x:Name="Paragraph" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="4,27,0,0" FontFamily="Bebas Kai" FontSize="16" Width="421"><Run Text="Next, increment and decrement operators. This is the ++ and --. These operators increase or decrease their operand's value by one. "/><LineBreak/><Run Text=""/><LineBreak/><Run FontSize="12" FontFamily="Courier New" Text="int int_exp = 0;"/><LineBreak FontSize="12" FontFamily="Courier New"/><Run FontSize="12" FontFamily="Courier New" Text="++int_exp;"/><LineBreak/><Run FontSize="12" FontFamily="Courier New" Text="cout &lt;&lt; int_exp &lt;&lt; endl;"/><LineBreak/><Run Foreground="#FF104214" FontWeight="Bold" FontSize="12" FontFamily="Courier New" Text=""/><LineBreak/><Run Foreground="#FF104214" FontWeight="Bold" FontSize="12" FontFamily="Courier New" Text="//Output"/><LineBreak/><Run FontSize="12" FontFamily="Courier New" Text="1"/></TextBlock>
+
     </Grid>
 </Page>
