--- a/CodeLingo/Lesson7/Page1.xaml
+++ b/CodeLingo/Lesson7/Page1.xaml
@@ -10,6 +10,16 @@
 
 
     <Grid>
-        
+        <Label x:Name="Subtitle" Content="This Lesson will cover the following: " HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
+        <Label x:Name="Step1" Content="1. Conditional Expressions" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,19,0,0"/>
+        <Label x:Name="Step2" Content="2. Logic operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,34,0,0"/>
+        <Label x:Name="Step3" Content="3. If statement" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,51,0,0"/>
+        <Label x:Name="Step4" Content="4. Else statement" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,66,0,0"/>
+        <Label x:Name="Step5" Content="5. Different variable scopes" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,81,0,0"/>
+        <Label x:Name="Step6" Content="6. Switch statement" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,96,0,0"/>
+        <Label x:Name="Step7" Content="7. How to do a menu" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="0,110,0,0"/>
+        <Label x:Name="Step8" Content="8. Ternary operator" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,125,0,0"/>
+
+
     </Grid>
 </Page>
